--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "api-workshop-sparkdigital",
+  "jest": {
+    "testPathIgnorePatterns": ["test/"]
+  },
   "version": "1.0.0",
   "dependencies": {
   },
